@@ -85,6 +85,42 @@ class RangeTestCase(unittest.TestCase):
             print rec
             self.fail("expected a TypeError")
 
+
+# Check the dtype read-only attribute
+class DtypeTestCase(common.TempFileMixin, common.PyTablesTestCase):
+
+    def test00a_table(self):
+        """Check dtype accessor for Table objects"""
+        a = self.h5file.createTable('/', 'table', Record)
+        self.assert_(a.dtype == a.description._v_dtype)
+
+    def test00b_column(self):
+        """Check dtype accessor for Column objects"""
+        a = self.h5file.createTable('/', 'table', Record)
+        c = a.cols.var3
+        self.assert_(c.dtype == a.description._v_dtype['var3'])
+
+    def test01_array(self):
+        """Check dtype accessor for Array objects"""
+        a = self.h5file.createArray('/', 'array', [1,2])
+        self.assert_(a.dtype == a.atom.dtype)
+
+    def test02_carray(self):
+        """Check dtype accessor for CArray objects"""
+        a = self.h5file.createCArray('/', 'array', FloatAtom(), [1,2])
+        self.assert_(a.dtype == a.atom.dtype)
+
+    def test03_carray(self):
+        """Check dtype accessor for EArray objects"""
+        a = self.h5file.createEArray('/', 'array', FloatAtom(), [0,2])
+        self.assert_(a.dtype == a.atom.dtype)
+
+    def test04_vlarray(self):
+        """Check dtype accessor for VLArray objects"""
+        a = self.h5file.createVLArray('/', 'array', FloatAtom())
+        self.assert_(a.dtype == a.atom.dtype)
+
+
 #----------------------------------------------------------------------
 
 def suite():
@@ -96,6 +132,7 @@ def suite():
     for i in range(1):
         theSuite.addTest(doctest.DocTestSuite(tables.atom))
         theSuite.addTest(unittest.makeSuite(RangeTestCase))
+        theSuite.addTest(unittest.makeSuite(DtypeTestCase))
 
     return theSuite
 
